[package]
name = "blockchain-info-app"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
dotenv = "0.15.0"
openssl-sys = "0.9.104"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0.216"
serde_derive = "1.0.216"
serde_json = "1.0.134"
tokio = { version = "0.2.0", features = ["full"] }
